[-] pen printer [*] drill printer

--- a/svab_nxt/res/values/strings.xml
+++ b/svab_nxt/res/values/strings.xml
@@ -94,6 +94,10 @@
 	
 	
 	<!-- PROGRAM PRINT FOTO -->
+	<string name="pen_printer_hide">-&gt; hide &lt;-</string>
+	
+	<!-- PROGRAM DRILL FOTO -->
+	<string name="drill_printer_hide">-&gt; hide &lt;-</string>
 	
 	<!-- PROGRAM READ LINE -->
 	<string name="read_line_update_value">update value</string>
